fix(frontend-edit): Fix published / created Date not showing up
publishedDate -> publishedAt

--- a/packages/frontend-edit/src/components/BlogCard.module.css
+++ b/packages/frontend-edit/src/components/BlogCard.module.css
@@ -11,7 +11,13 @@
     align-items: center;
 }
 
-@media (max-width: 907px) {
+.blogInfo {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+}
+
+@media (max-width: 1023px) {
     .blogCard {
         width: 90%;
     }
